--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ function updateNumbers() {
   </head> 
   <body style="background-color: #e7a3c1"> 
     <div class="container" style="position: absolute; left: 482px; top: 181.5px;">
-      <div class="words"> 和大哥的日常 </div>
+      <div class="words"> 小美和我 </div>
       <div class="days">
         <span class="days-number">1921</span>
         <span class="days-label">days</span>
